--- a/Trip/Base.lproj/Main.storyboard
+++ b/Trip/Base.lproj/Main.storyboard
@@ -4078,7 +4078,7 @@
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Vd-uZ-wmM" customClass="CosmosView" customModule="Cosmos">
+                                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3Vd-uZ-wmM" customClass="CosmosView" customModule="Cosmos">
                                                         <rect key="frame" x="109.5" y="75.5" width="195" height="35"/>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                         <userDefinedRuntimeAttributes>
@@ -5721,13 +5721,13 @@
                     <navigationItem key="navigationItem" id="BB4-kS-hsu"/>
                     <connections>
                         <outlet property="acceptBut" destination="ZcD-MI-aCg" id="qZI-sY-bIu"/>
+                        <outlet property="bigView" destination="8TD-9N-49S" id="9Y1-dI-IZY"/>
                         <outlet property="description1" destination="W18-En-ZHE" id="O5G-9F-dOI"/>
                         <outlet property="descrtition2" destination="yks-1F-3Ci" id="dzs-D0-RnQ"/>
                         <outlet property="image" destination="prC-X9-NTN" id="Gt4-fS-Ww1"/>
                         <outlet property="messageTitle" destination="r9C-tx-si1" id="Hdh-XI-a8P"/>
                         <outlet property="name" destination="QDL-95-RuL" id="by4-zy-lAy"/>
                         <outlet property="phone" destination="GvH-Do-RYj" id="wul-0F-n5y"/>
-                        <outlet property="popView" destination="8TD-9N-49S" id="nVz-Hr-71A"/>
                         <outlet property="rate" destination="b4l-sq-hcb" id="HhC-hc-yW5"/>
                         <outlet property="ratelbl" destination="fzv-h0-Gfs" id="moh-gp-DhO"/>
                         <outlet property="rejectBut" destination="WuN-Ny-iEM" id="RwW-27-28e"/>
